<resources>
    <string name="app_name">GetTexiDriver</string>
    <string name="todo">TODO</string>
    <string name="user_name">user Name:</string>
    <string name="password">password:</string>
    <string name="user_name1">user name:</string>
    <string name="id_number">id number:</string>
    <string name="phone_number">phone number:</string>
    <string name="email_adress">email adress:</string>
    <string name="credit_number">credit number:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="have_you_account_login_her">have you account? login her!</string>
    <string name="NotTitle">you have new message!</string>
    <string name="NotContent">hello you have new ride, please take it!</string>
    <string name="registerbutton">Dont have you account? register her!</string>
    <string name="empty">Please Fill all the Fields!!</string>
    <string name="store">Data Stored Successfuly!</string>
    <string name="fetch">Data Displayed Successfuly!</string>
    <string name="type_fo_filtering">type fo filtering</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_email_to_passenger">send Email to passenger</string>
    <string name="source">Source:</string>
    <string name="full_name">full name:</string>
    <string name="call_to_passenger">call to passenger</string>
    <string name="send_message_to_passenger">send message to passenger</string>
    <string name="take_the_ride">take the ride</string>
    <string name="finish_the_ride">finish the ride</string>
    <string name="distance">distance:</string>
    <string name="destination">destination:</string>
    <string name="Taxi_on_the_way">Hello! the taxi is on the way!!!</string>
    <string name="firebase_error">failure to load firebase</string>
    <string name="insert">insert id</string>
    <string name="error">Error</string>
    <string name="account">have you account? login her!</string>
    <string name="fill_email">please fill the email field!</string>
    <string name="contains">the email must contains @</string>
    <string name="fill_id">please fill the id number field!</string>
    <string name="fill_password">please fill the password field!</string>
    <string name="fill_userName">please fill the user name field!</string>
    <string name="fill_creditCard">please fill the credit card field!</string>
    <string name="fill_phone">please fill the phone field!</string>
    <string name="new_reqest">new request for drive</string>
    <string name="relevent_ride">you have a new relevant ride to take</string>
    <string name="email_user">email user</string>
    <string name="dont_have_you_account_register_her">Dont have you account? register her!</string>
    <string name="Extract_id">this id not exists</string>
    <string name="length_id">the id length must be 9</string>
    <string name="length_phone">the length of the phone number is not make sense</string>
    <string name="length_password">the password must be longer then five letters</string>
    <string name="remember_me">remember me!</string>
    <string name="filter">distance from the raid Filter(KM)</string>
    <string name="shekel">SHEKEL</string>
    <string name="KM">KM</string>
    <string name="update">update ride</string>
    <string name="payment">payment:</string>
    <string name="end_drive">end Drive:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="goodbye">goodbye!!!</string>
    <string name="welcome_to_driver_gettaxi">Welcome to Driver getTaxi!</string>
    <string name="signout">signOut</string>
    <string name="finish_rides">finish rides</string>
    <string name="progress_rides">progress rides</string>
    <string name="available_rides">available rides</string>
    <string name="home">Home</string>
    <string name="app_driver">App Driver</string>
    <string name="pass_finish">the ride pass to finish rides</string>
    <string name="pass_progress">the ride pass to progress rides</string>
</resources>
