<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".controller.RegisterActivity">
    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/adb"
        android:drawableStart="@drawable/adb"
        android:ems="10"
        android:hint="@string/user_name1"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />
    <EditText
        android:id="@+id/idNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/id"
        android:drawableStart="@drawable/id"
        android:ems="10"
        android:hint="@string/id_number"
        android:inputType="number"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/phone"
        android:drawableStart="@drawable/phone"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="226dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/CreditCard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="267dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/credit_card"
        android:drawableStart="@drawable/credit_card"
        android:ems="10"
        android:hint="@string/credit_number"
        android:inputType="number"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="189dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/lock"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:text="@string/have_you_account_login_her"
        android:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/Register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="26dp"
        app:cardElevation="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
