<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:text="@string/full_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/idInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/sourceInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#000000"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="@style/Material"
            android:id="@+id/buttonEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/ic_email_black_24dp"
            android:text="@string/send_email_to_passenger"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            style="@style/Material"
            android:id="@+id/buttonCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/ic_phone_black_24dp"
            android:text="@string/call_to_passenger"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/buttonMessage"
            style="@style/Material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/ic_message_black_24dp"
            android:text="@string/send_message_to_passenger"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/buttonFinishDrive"
            style="@style/Material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_clear_black_24dp"
            android:text="@string/finish_the_ride"
            android:textSize="8sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>